--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -21,23 +21,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bQW-K4-s9O">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rqd-0U-ye6">
-                                <rect key="frame" x="0.0" y="75" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="7OC-Jh-hxh"/>
-                                </connections>
-                            </searchBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="662-JW-EcP">
-                                <rect key="frame" x="16" y="141" width="359" height="478"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="662-JW-EcP">
+                                <rect key="frame" x="5" y="135" width="354" height="532"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="532" id="j87-5M-cMN"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ODN-Fn-GZe">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -52,11 +41,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="Z9S-tO-gfP">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="Z9S-tO-gfP">
                                                     <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pj8-IZ-AQE">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pj8-IZ-AQE">
                                                     <rect key="frame" x="0.0" y="79" width="105" height="25"/>
                                                     <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -66,7 +54,12 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="Pj8-IZ-AQE" secondAttribute="bottom" id="SYG-vC-hUd"/>
+                                            <constraint firstItem="Z9S-tO-gfP" firstAttribute="top" secondItem="BnM-M7-WnD" secondAttribute="top" id="1xY-mr-cTf"/>
+                                            <constraint firstAttribute="trailing" secondItem="Z9S-tO-gfP" secondAttribute="trailing" id="4i4-LC-utQ"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="Z9S-tO-gfP" secondAttribute="bottom" constant="17" id="C86-PB-IGR"/>
+                                            <constraint firstItem="Z9S-tO-gfP" firstAttribute="trailing" secondItem="Pj8-IZ-AQE" secondAttribute="trailing" id="Oul-K4-Kiv"/>
+                                            <constraint firstItem="Z9S-tO-gfP" firstAttribute="leading" secondItem="Pj8-IZ-AQE" secondAttribute="leading" id="QLP-jv-0f8"/>
+                                            <constraint firstAttribute="bottom" secondItem="Pj8-IZ-AQE" secondAttribute="bottom" constant="1" id="SYG-vC-hUd"/>
                                             <constraint firstItem="Pj8-IZ-AQE" firstAttribute="leading" secondItem="BnM-M7-WnD" secondAttribute="leading" id="dyk-Dw-H2i"/>
                                             <constraint firstItem="Pj8-IZ-AQE" firstAttribute="top" secondItem="BnM-M7-WnD" secondAttribute="top" constant="79" id="h0H-up-m1q"/>
                                         </constraints>
@@ -78,22 +71,62 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S6x-hm-5bg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
+                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="71" id="ocI-pK-pmW"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="rjd-Kw-QpS">
+                                <rect key="frame" x="0.0" y="71" width="375" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="XVC-Tw-3Jo"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="pIa-9Q-z3G"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="662-JW-EcP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="5" id="0gV-nP-gi3"/>
+                            <constraint firstItem="662-JW-EcP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="5" id="1iY-sW-HZM"/>
+                            <constraint firstAttribute="trailing" secondItem="662-JW-EcP" secondAttribute="trailing" constant="16" id="4Mb-7p-nEP"/>
+                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="leading" secondItem="S6x-hm-5bg" secondAttribute="leading" id="Ebd-Hh-0g1"/>
+                            <constraint firstItem="S6x-hm-5bg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IdO-LA-vs2"/>
+                            <constraint firstAttribute="trailing" secondItem="rjd-Kw-QpS" secondAttribute="trailing" id="OGY-tb-mE5"/>
+                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="top" secondItem="S6x-hm-5bg" secondAttribute="bottom" id="UFw-Cr-fCM"/>
+                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="trailing" secondItem="S6x-hm-5bg" secondAttribute="trailing" id="Xgk-zf-5oe"/>
+                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aFk-qL-stw"/>
+                            <constraint firstItem="ZBY-rq-r0d" firstAttribute="top" secondItem="662-JW-EcP" secondAttribute="bottom" id="d4W-RL-iM5"/>
+                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="top" secondItem="S6x-hm-5bg" secondAttribute="bottom" id="jf6-7j-DGE"/>
+                            <constraint firstAttribute="trailing" secondItem="662-JW-EcP" secondAttribute="trailing" constant="16" id="ql9-DJ-1HA"/>
+                            <constraint firstItem="662-JW-EcP" firstAttribute="top" secondItem="rjd-Kw-QpS" secondAttribute="bottom" constant="8" id="vuK-tT-qiN"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="collection" destination="662-JW-EcP" id="Fee-dH-dkf"/>
-                        <outlet property="searchDisplayController" destination="YZU-8L-Pfu" id="moe-vz-cqp"/>
+                        <outlet property="searchDisplayController" destination="WWO-JR-302" id="8uX-fm-Ea1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <searchDisplayController id="YZU-8L-Pfu">
                     <connections>
                         <outlet property="delegate" destination="BYZ-38-t0r" id="MLx-Na-OPU"/>
-                        <outlet property="searchBar" destination="Rqd-0U-ye6" id="akd-do-Yfd"/>
                         <outlet property="searchContentsController" destination="BYZ-38-t0r" id="n2g-DZ-FF3"/>
                         <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="m5r-Md-JF6"/>
                         <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="JQO-Ze-9ey"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="WWO-JR-302">
+                    <connections>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="Wx5-zG-LLq"/>
+                        <outlet property="searchBar" destination="rjd-Kw-QpS" id="rwH-5S-I72"/>
+                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="m7F-JO-biU"/>
+                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="PVP-ZU-J5j"/>
+                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="T9l-sR-UJ7"/>
                     </connections>
                 </searchDisplayController>
             </objects>
