--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lAC-Qh-stV">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,62 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main Table View Controller-->
+        <scene sceneID="fSZ-gc-35L">
+            <objects>
+                <tableViewController id="VQC-cp-SSA" customClass="MainTableViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="QZp-eE-l18">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="689-L5-kgG">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="VQC-cp-SSA" id="jZy-00-ndC"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="CEC-dE-o5w">
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CEC-dE-o5w" id="pb2-ef-ZCb">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="VQC-cp-SSA" id="Eip-2V-sxr"/>
+                            <outlet property="delegate" destination="VQC-cp-SSA" id="DP6-uA-qbB"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="0nk-Eb-yvc">
+                        <barButtonItem key="rightBarButtonItem" title="Dictionary" id="dGX-oo-4OI">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="Bmj-Qr-typ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="dRg-Dp-Phj" id="ceV-2N-3c6"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e5a-tH-xIA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="dRg-Dp-Phj">
+                    <connections>
+                        <outlet property="delegate" destination="VQC-cp-SSA" id="4Hz-pk-mDW"/>
+                        <outlet property="searchBar" destination="689-L5-kgG" id="5U0-X4-Fsn"/>
+                        <outlet property="searchContentsController" destination="VQC-cp-SSA" id="Eun-Cu-DDm"/>
+                        <outlet property="searchResultsDataSource" destination="VQC-cp-SSA" id="pLD-VW-Lv8"/>
+                        <outlet property="searchResultsDelegate" destination="VQC-cp-SSA" id="e4e-TP-sZp"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="2480.8000000000002" y="33.733133433283363"/>
+        </scene>
+        <!--All Words-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
@@ -44,7 +99,7 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="Z9S-tO-gfP">
                                                     <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pj8-IZ-AQE">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pj8-IZ-AQE">
                                                     <rect key="frame" x="0.0" y="79" width="105" height="25"/>
                                                     <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -71,13 +126,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S6x-hm-5bg">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
-                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="71" id="ocI-pK-pmW"/>
-                                </constraints>
-                            </view>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="rjd-Kw-QpS">
                                 <rect key="frame" x="0.0" y="71" width="375" height="56"/>
                                 <constraints>
@@ -94,18 +142,15 @@
                             <constraint firstItem="662-JW-EcP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="5" id="0gV-nP-gi3"/>
                             <constraint firstItem="662-JW-EcP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="5" id="1iY-sW-HZM"/>
                             <constraint firstAttribute="trailing" secondItem="662-JW-EcP" secondAttribute="trailing" constant="16" id="4Mb-7p-nEP"/>
-                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="leading" secondItem="S6x-hm-5bg" secondAttribute="leading" id="Ebd-Hh-0g1"/>
-                            <constraint firstItem="S6x-hm-5bg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IdO-LA-vs2"/>
                             <constraint firstAttribute="trailing" secondItem="rjd-Kw-QpS" secondAttribute="trailing" id="OGY-tb-mE5"/>
-                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="top" secondItem="S6x-hm-5bg" secondAttribute="bottom" id="UFw-Cr-fCM"/>
-                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="trailing" secondItem="S6x-hm-5bg" secondAttribute="trailing" id="Xgk-zf-5oe"/>
                             <constraint firstItem="rjd-Kw-QpS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aFk-qL-stw"/>
                             <constraint firstItem="ZBY-rq-r0d" firstAttribute="top" secondItem="662-JW-EcP" secondAttribute="bottom" id="d4W-RL-iM5"/>
-                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="top" secondItem="S6x-hm-5bg" secondAttribute="bottom" id="jf6-7j-DGE"/>
                             <constraint firstAttribute="trailing" secondItem="662-JW-EcP" secondAttribute="trailing" constant="16" id="ql9-DJ-1HA"/>
                             <constraint firstItem="662-JW-EcP" firstAttribute="top" secondItem="rjd-Kw-QpS" secondAttribute="bottom" constant="8" id="vuK-tT-qiN"/>
+                            <constraint firstItem="rjd-Kw-QpS" firstAttribute="top" secondItem="f76-sI-emv" secondAttribute="bottom" constant="7" id="zwp-mf-J5k"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="All Words" id="mjw-Jr-WvV"/>
                     <connections>
                         <outlet property="collection" destination="662-JW-EcP" id="Fee-dH-dkf"/>
                         <outlet property="searchDisplayController" destination="WWO-JR-302" id="8uX-fm-Ea1"/>
@@ -130,7 +175,25 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="37.600000000000001" y="25.637181409295355"/>
+            <point key="canvasLocation" x="3418.4000000000001" y="25.637181409295355"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9Mo-Ue-lal">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lAC-Qh-stV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wXI-S8-fJv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VQC-cp-SSA" kind="relationship" relationship="rootViewController" id="v6Q-MR-b5x"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aWc-63-ngt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1541.5999999999999" y="33.733133433283363"/>
         </scene>
     </scenes>
     <resources>
