--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lAC-Qh-stV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JHT-sE-j4r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -34,6 +34,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="nYy-8G-DyS" kind="showDetail" id="jHa-8P-Xey"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -53,6 +56,42 @@
             </objects>
             <point key="canvasLocation" x="2480.8000000000002" y="33.733133433283363"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Z0h-w8-bPw">
+            <objects>
+                <viewController id="i3V-Bp-xKe" customClass="DetailViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pDe-w9-FdY"/>
+                        <viewControllerLayoutGuide type="bottom" id="Vm9-nc-W5T"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nA7-JB-DDM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zlj-sX-kYH">
+                                <rect key="frame" x="166" y="92" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fql-ii-jCH">
+                                <rect key="frame" x="67" y="210" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="1Gj-ng-X0r"/>
+                    <connections>
+                        <outlet property="signDetailNameLabel" destination="Zlj-sX-kYH" id="oHA-HE-gNJ"/>
+                        <outlet property="signImage" destination="Fql-ii-jCH" id="RUV-Zc-2DL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bNX-j0-f2J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3420" y="906.29685157421295"/>
+        </scene>
         <!--All Words-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -66,7 +105,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="662-JW-EcP">
-                                <rect key="frame" x="5" y="135" width="354" height="532"/>
+                                <rect key="frame" x="5" y="91" width="354" height="576"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="532" id="j87-5M-cMN"/>
@@ -116,7 +155,7 @@
                                 </cells>
                             </collectionView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="rjd-Kw-QpS">
-                                <rect key="frame" x="0.0" y="71" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="27" width="375" height="56"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="XVC-Tw-3Jo"/>
                                 </constraints>
@@ -166,6 +205,16 @@
             </objects>
             <point key="canvasLocation" x="3418.4000000000001" y="25.637181409295355"/>
         </scene>
+        <!--Master View Controller-->
+        <scene sceneID="sqQ-8W-FjB">
+            <objects>
+                <viewController title="Master View Controller" id="JHT-sE-j4r" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="N9G-6J-BSr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D1g-vX-uwh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="658" y="17"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="9Mo-Ue-lal">
             <objects>
@@ -177,15 +226,34 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="VQC-cp-SSA" kind="relationship" relationship="rootViewController" id="v6Q-MR-b5x"/>
+                        <segue destination="nYy-8G-DyS" kind="relationship" relationship="rootViewController" id="Tow-Lu-9Zn"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aWc-63-ngt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1541.5999999999999" y="33.733133433283363"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2XK-wX-rlh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nYy-8G-DyS" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="enq-AD-bmC"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lcB-M8-uEN">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6wC-HB-qfQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2480.8000000000002" y="906.29685157421295"/>
+        </scene>
     </scenes>
     <resources>
         <image name="1" width="272" height="205"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Tow-Lu-9Zn"/>
+    </inferredMetricsTieBreakers>
 </document>
