--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -21,17 +21,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="010" translatesAutoresizingMaskIntoConstraints="NO" id="Fql-ii-jCH">
+                                <rect key="frame" x="81" y="237" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zlj-sX-kYH">
-                                <rect key="frame" x="159" y="95" width="42" height="21"/>
+                                <rect key="frame" x="166" y="105" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fql-ii-jCH">
-                                <rect key="frame" x="80" y="180" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -79,6 +79,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="nameLabel" destination="TGa-2J-iAi" id="tOu-c6-xKx"/>
                                     <segue destination="UQ2-4B-Ecv" kind="showDetail" id="dmP-27-GYr"/>
                                 </connections>
                             </tableViewCell>
@@ -89,7 +90,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="5QZ-f7-pKH">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="dvH-95-jDa">
+                        <barButtonItem key="rightBarButtonItem" title="Dictionary" id="dvH-95-jDa">
                             <connections>
                                 <segue destination="BYZ-38-t0r" kind="show" id="g9g-YT-K3S"/>
                             </connections>
@@ -259,6 +260,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="010" width="454" height="252.5"/>
         <image name="1" width="272" height="205"/>
     </resources>
     <inferredMetricsTieBreakers>
